--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -75,6 +75,10 @@
                         <i class="fas fa-list-alt"></i>
                         <span>Purchases</span>
                     </a>
+                    <a href="/vip" <%= currentPage === 'vip' ? 'style="color: var(--primary);"' : '' %>>
+                        <i class="fas fa-crown"></i>
+                        <span>VIP</span>
+                    </a>
                     <a href="/wallet" <%= currentPage === 'wallet' ? 'style="color: var(--primary);"' : '' %>>
                         <i class="fas fa-wallet"></i>
                         <span>Wallet</span>
